--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+.logo img
+{
+   padding-top: px;
+}
 body
 {
     background-color: beige;
@@ -60,7 +64,7 @@ li
 {
     background-color: black;
     width: 100%;
-    height: 30px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -70,6 +74,7 @@ li
     position: fixed;
     width: 100%;
     top: 0;
+    padding:10px;
 }
 /*dropdown*/
 .dropdown
