--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ li
 }
 .hero h1
 {
+    text-shadow: 4px 4px 4px rgb(47, 97, 145),3px 3px 3px rgb(11, 5, 17);
     font-style: italic;
     font-size:100px;
     color: rgb(25, 175, 138);
@@ -277,4 +278,5 @@ li
     color: gold;
     margin-left: 50px;
 }
+
 
